# awbot

./: .codecov.yml  .envrc  .gitattributes  .gitignore  .gitmodules  .yamllint.yml  CONTRIBUTING.md  DEVELOPER.md  DEVELOPMENT.md  DOCKER.md  DOCKER_FIX.md  Dockerfile  Makefile  QUICK_START.md  README.md  TODO.md  VERSIONING.md  docker-compose.yml  flake.nix  install-all.sh  install-deps.js  install_deps.py  orchestrate.py  package.json  pyproject.toml  shell.nix
.devcontainer/: devcontainer.json
.devcontainer/.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: r540dqfhanmqwrf6i01zq4c6pbl0bf1a-source
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.prisma-engines/: schema-engine
ai-tooling/: config.yaml  proxy.py  pyproject.toml
api/: go.mod
api/apps/: go.mod
awbot/: .markdownlintignore  DEVELOPER.md  DEVELOPMENT.md  Makefile  QUICK_START.md  README.md  __init__.py  app.py  bot.py  cog_loader.py  docker-compose.dev.yml  help.py  main.py  pyproject.toml
config/: settings.yml.example
dashboard/: instrumentation-client.ts  middleware.ts  next.config.ts  package.json  sentry.edge.config.ts  sentry.server.config.ts
discord.py/: pyproject.toml
discord.py/.github/: CONTRIBUTING.md  FUNDING.yml
discord.py/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
discord.py/discord/: __init__.py  __main__.py  _types.py  abc.py  activity.py  appinfo.py  asset.py  audit_logs.py  automod.py  backoff.py  channel.py  client.py  colour.py  components.py  context_managers.py  embeds.py  emoji.py  enums.py  errors.py  file.py  flags.py  gateway.py  guild.py  http.py  integrations.py  interactions.py  invite.py  member.py  mentions.py  message.py  mixins.py  object.py  oggparse.py  opus.py  partial_emoji.py  permissions.py  player.py  poll.py  presences.py  primary_guild.py  (+20 more)
discord.py/discord/app_commands/: __init__.py  checks.py  commands.py  errors.py  installs.py  models.py  namespace.py  transformers.py  translator.py  tree.py
discord.py/discord/ext/commands/: __init__.py  _types.py  bot.py  cog.py  context.py  converter.py  cooldowns.py  core.py  errors.py  flags.py  help.py  hybrid.py  parameters.py  view.py
discord.py/discord/ext/tasks/: __init__.py
discord.py/discord/types/: __init__.py  activity.py  appinfo.py  audit_log.py  automod.py  channel.py  command.py  components.py  embed.py  emoji.py  gateway.py  guild.py  integration.py  interactions.py  invite.py  member.py  message.py  poll.py  role.py  scheduled_event.py  sku.py  snowflake.py  soundboard.py  sticker.py  subscription.py  team.py  template.py  threads.py  user.py  voice.py  webhook.py  welcome_screen.py  widget.py
discord.py/discord/ui/: __init__.py  button.py  dynamic.py  item.py  modal.py  select.py  text_input.py  view.py
discord.py/discord/webhook/: __init__.py  async_.py  sync.py
discord.py/examples/: advanced_startup.py  converters.py
discord.py/tests/: test_annotated_annotation.py  test_app_commands_autocomplete.py  test_app_commands_description.py  test_app_commands_group.py  test_app_commands_invoke.py  test_colour.py  test_embed.py  test_ext_commands_cog.py  test_ext_commands_description.py  test_files.py  test_ui_buttons.py  test_ui_modals.py  test_ui_selects.py
docs/: package.json  pnpm-lock.yaml
envs/: .env.example  deploy_envs.sh
makes/: .gitignore
makes/docs/: pyproject.toml
scripts/: dev-setup.sh  docker-troubleshoot.sh  docker_toolkit.py  download-prisma-engines.sh  download_prisma_engines.py
tests/: README.md
(+191 files in other folders)
