[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "9.6.16"
jinja2 = "3.1.6"
idna = "3.10"
requests = "2.32.4"
urllib3 = "2.5.0"
certifi = "2024.12.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
